some debug for END